--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.6.0",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.3",
     "node-sass": "^4.13.0",
     "primereact": "^3.3.2",
