--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.6.0",
     "@material-ui/pickers": "^3.2.8",
+    "@iconify/icons-ic": "^1.0.8",
+    "@iconify/react": "^1.1.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
