--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.6.0",
-    "@material-ui/pickers": "^3.2.8",
     "@iconify/icons-ic": "^1.0.8",
     "@iconify/react": "^1.1.1",
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.3",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "primereact": "^3.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
