--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "local-storage": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
